src/test/deca/syntax/valid/parser/oracle/if_elseif_else_inside_if.deca
{
    if(true){
        if(50 == 50.0){
            println("Hello Moon !");
        } else if(40 + 10.0 = 50.0){
                    printx("H");
                } else if(40 + 10.0 = 50.0){
                              printx("H");
                          } else {
            50;
        }
    } else if(50.0 == 80- -6){
        if(50 == 50.0){
                    println("Hello Moon !");
                } else if(40 + 10.0 = 50.0){
                    printx("H");
                } else {
                    50;
                }
    } else {
        if(50 == 50.0){
                    println("Hello Moon !");
                } else if(40 + 10.0 = 50.0){
                    printx("H");
                } else {
                    50;
                }
    }
}