src/test/deca/syntax/invalid/parser/oracle/else_with_one_missing_bracket_left.deca
{
    if(true){}else i = 1;}
}